--- a/src/sass/blocks/_reasons.sass
+++ b/src/sass/blocks/_reasons.sass
@@ -1,6 +1,6 @@
 .reasons
     min-height: 700px
-    padding: 10px 0 0 0
+    padding: 10px 0 25px 0
     background-color: $base_white
     &__heading
         margin-top: 25px
