--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,8 +15,16 @@
 @import 'blocks/_header'
 @import 'blocks/_subheader'
 @import 'blocks/_promo'
-@import 'blocks/_require'
 @import 'blocks/_reasons'
+@import 'blocks/_mobile'
+@import 'blocks/_choice'
+@import 'blocks/_require'
+@import 'blocks/_world'
+@import 'blocks/_footer'
 @import 'blocks/_heading'
+@import 'blocks/_third_heading'
 @import 'blocks/_button'
+@import 'blocks/_title'
+@import 'blocks/_subtitile'
+@import 'blocks/_devider'
 @import 'base/_media'
